--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,33 @@
 # Basic
+types-requests==2.31.0.2
+urllib3==1.26.18
 jupyter==1.0.0
 python-dotenv==1.0.0
-numpy==1.25.0
-pandas==2.0.3
-matplotlib==3.7.2
-scikit-learn==1.3.0
-openai==0.27.8
-tiktoken==0.4.0
+numpy==1.26.3
+pandas==2.1.4
+matplotlib==3.8.2
+scikit-learn==1.3.2
+openai==1.6.1
+tiktoken==0.5.2
 
 # Function Call~
 requests==2.31.0
 beautifulsoup4==4.12.2
-google-api-python-client==2.93.0
+google-api-python-client==2.112.0
 
 # Llama Index
-llama_index==0.7.5
-flask==2.3.2
+llama_index==0.9.26
+flask==3.0.0
 
 # LangChain
-langchain==0.0.230
-pypdf==3.12.1
-hnswlib==0.7.0
-pydantic==1.10.8
-chromadb==0.3.26
-unstructured==0.8.1
+langchain==0.1.0
+langchain-openai==0.0.2
+langchainhub==0.1.13
+langchain-experimental==0.0.49
+pypdf==3.17.4
+chromadb==0.4.20
+unstructured==0.11.8
 wikipedia==1.4.0
 
 # Streamlit
-streamlit==1.24.1
+streamlit==1.29.0
