--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,37 @@
 # Basic
-types-requests==2.31.0.2
-urllib3==1.26.18
+types-requests==2.31.0.20240406
+urllib3==2.2.1
 jupyter==1.0.0
-python-dotenv==1.0.0
-numpy==1.26.3
-pandas==2.1.4
-matplotlib==3.8.2
-scikit-learn==1.3.2
-openai==1.6.1
-tiktoken==0.5.2
+python-dotenv==1.0.1
+numpy==1.26.4
+pandas==2.2.2
+matplotlib==3.8.4
+scikit-learn==1.4.2
+openai==1.23.2
+tiktoken==0.6.0
 
 # Function Call~
 requests==2.31.0
-beautifulsoup4==4.12.2
-google-api-python-client==2.112.0
+beautifulsoup4==4.12.3
+google-api-python-client==2.126.0
 
 # Llama Index
-llama_index==0.9.26
-flask==3.0.0
+llama-index==0.10.30
+llama-index-readers-file==0.1.19
+llama-index-llms-openai==0.1.16
+flask==3.0.3
 
 # LangChain
-langchain==0.1.0
-langchain-openai==0.0.2
-langchainhub==0.1.13
-langchain-experimental==0.0.49
-pypdf==3.17.4
-chromadb==0.4.20
-unstructured==0.11.8
+nltk==3.8.1
+langchain==0.1.16
+langchain-openai==0.1.3
+langchainhub==0.1.15
+langchain-experimental==0.0.57
+langchain-google-community==1.0.2
+pypdf==4.2.0
+chromadb==0.4.24
+unstructured==0.13.3
 wikipedia==1.4.0
 
 # Streamlit
-streamlit==1.29.0
+streamlit==1.33.0
